<resources>
    <string name="app_name" translatable="false">OpenMobileNetworkToolkit</string>
    <string name="action_android">Android Testing</string>
    <string name="action_samsung" translatable="false">Samsung IMS</string>
    <string name="action_sony" translatable="false">Sony Service</string>
    <string name="action_nokia" translatable="false">Nokia enable SA</string>
    <string name="action_huawei" translatable="false">Huawei Project</string>
    <string name="action_mediatek" translatable="false">Mediatek IMS</string>
    <string name="action_iperf3" translatable="false">iPerf3</string>
    <string name="execute_iperf_command">Send</string>
    <string name="loggin_notifaction">Logging Service</string>
    <string name="appinfo">This app is provided by NGNI a department of Fraunhofer FOKUS. \n\nhttps://www.fokus.fraunhofer.de/go/ngni \n\nThis software is licensed under BSD 3-Clause Clear License https://spdx.org/licenses/BSD-3-Clause-Clear.html \n\nAuthors: \n\nPeter Hasse \nMohsin Nisar \nJohann Hackler</string>
    <string name="first_fragment_label">OpenMobileNetworkToolkit</string>
    <string name="second_fragment_label">about</string>
    <string name="about">About</string>
    <string name="service_name">OMNT</string>
    <string name="app_description">OMNT OpenMobileNetworkToolkit, the swiss army knife for network researcher</string>
    <string name="device_admin_description">I need your permission</string>
    <string name="slicing_setup">Slicing</string>
    <string name="channel_name">OMNT_Notification</string>
    <string name="channel_description">Notification channel for OpenMobileNetworkToolkit</string>
    <string name="enable_influx">InfluxDB log</string>
    <string name="influx_url">InfluxDB instance URL / IP</string>
    <string name="influx_url_dialog_title">InfluxDB URL / IP (with protocol and port)</string>
    <string name="influx_org">InfluxDB Organization</string>
    <string name="influx_org_dialog_title">Set InfluxDB Organization</string>
    <string name="influx_token">Influx Token</string>
    <string name="influx_token_dialog_title">Set InfluxDB Token</string>
    <string name="influx_network_data">Log network information</string>
    <string name="log_neighbour_cells">Log neighbour cells</string>
    <string name="influx_throughput_data">Log throughput information</string>
    <string name="influx_cell_data">Log cell information</string>
    <string name="influx_ip_address_data">Log IP addresses</string>
    <string name="influx_battery_data">Log battery information</string>
    <string name="influx_bucket">InfluxDB bucket</string>
    <string name="influx_bucket_dialog_title">Set InfluxDB bucket</string>
    <string name="measurement">Measurement name</string>
    <string name="tags">Tags</string>
    <string name="tags_summary">Comma separated list of tags</string>
    <string name="enable_logging">Enable</string>
    <string name="enable_local_log">InfluxDB log</string>
    <string name="enable_logging_summary">Start / stop the logging service</string>
    <string name="enable_local_log_summary">Log to a local Influx 2.x database</string>
    <string name="enable_influx_summary">Log to a remote Influx 2.x database</string>
    <string name="work_profile_management">Work Profile</string>
    <string name="start_logging_on_boot">Start on boot</string>
    <string name="start_logging_on_boot_summary">Start the logging service on device boot</string>
    <string name="fake_location">Use fake location</string>
    <string name="fake_location_summary">Use a fake location for all measurements for testing / privacy reasons</string>
    <string name="set_up_profile">Set up profile</string>
    <string name="enable_forwarding">Enable forwarding of Share Intent</string>
    <string name="send_intent_text">Send a sample share Intent</string>
    <string name="disable_forwarding">Disable forwarding</string>
    <string name="setup_profile_message">This app is currently not the owner of this device or profile. Please tap Next to set up appropriate management by this app.</string>
    <string name="main_message">The app is ready to control the managed profile.</string>
    <string name="remove_profile">Remove managed profile</string>
    <string name="all_done">Setup all done</string>
    <string name="all_done_explanation">To manage the configuration in your managed profile, visit the badged version of this application.</string>
    <string name="set_chrome_restrictions">Set Chrome restrictions</string>
    <string name="clear_chrome_restrictions">Clear Chrome restrictions</string>
    <string name="icon">Icon</string>
    <string name="profile_name">Sample Managed Profile</string>
    <string name="activity_not_found">No app can handle this intent.</string>
    <string name="set_up_managed_profile">Set up managed profile</string>
    <string name="preferential_network_service">Preferential Network Service</string>
    <string name="settings">Settings</string>
    <string name="influxdb">InfluxDB</string>
    <string name="special_codes">Special Codes</string>
    <string name="logging_interval">Interval</string>
    <string name="log_signal_data">Log signal data</string>
    <string name="enable_local_file_summary">Log to a local file</string>
    <string name="enable_local_file_log">Log file</string>
    <string name="upload">upload</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="action_ping">Ping</string>
    <string name="dialog_no_location">Location is disabled, enable it or use fake location</string>
    <string name="dialog_no_location_enable">Enable Location</string>
    <string name="dialog_no_location_fake">Use fake location</string>
    <string name="dialog_no_location_title">Location Disabled</string>
    <string name="radio_settings">Radio Settings</string>
    <string name="select_plmn">Set PLMN</string>
    <string name="access_networktype">Select Access Network Type</string>
    <string name="persist_boot">Persist until reboot</string>
    <string name="carrier_settings">Carrier Settings</string>
    <string name="apply_carrier_settings">Apply carrier settings now</string>
    <string name="read_carrier_settings">Read</string>
    <string name="press_the_read_button">Press the read button</string>
    <string name="exit">Exit\n</string>
    <string name="action_xiaomi">xiaomi</string>
    <string name="carrier_settings_summary">Applied on SIM / network change</string>
    <string name="show_neighbour_cells">Show neighbour cells</string>
    <string name="home_screen_settings">Home screen settings</string>
    <string name="app_settings">App settings</string>
    <string name="action_android_ims">Android IMS</string>
    <string name="influx_wifi_data">Log WiFi information</string>
    <string name="mqtt_client_username_summary">MQTT Username</string>
    <string name="enable_mqtt">Enable MQTT</string>
    <string name="enable_mqtt_on_boot">Enable MQTT on boot</string>
    <string name="mqtt_client_username_dialog_title">Username provided by your MQTT-Broker</string>
    <string name="mqtt_client_user_name_title">MQTT Client Username</string>
    <string name="mqtt_client_password_dialog_title">Password provided by your MQTT-Broker</string>
    <string name="mqtt_client_password">MQTT Client Password</string>
    <string name="mqtt_host_dialog_title">MQTT-Broker Address, including Port</string>
    <string name="mqtt_host">MQTT-Broker Address</string>
    <string name="mqtt_host_hint">tcp://192.168.213.89:1883</string>
    <string name="mqtt_service_running">MQTT Service</string>
    <string name="clear_preferences_message">Do you want to clear all Configuartions?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="na">N/A</string>
    <string name="bsic">BSIC</string>
    <string name="wcmdaDbm">WCMDA dBm</string>
    <string name="wcmdaEcNo">WCMDA EcNo</string>
    <string name="cellType">Type</string>
    <string name="alphaLong">Alpha Long</string>
    <string name="bands">Bands</string>
    <string name="ci">CI</string>
    <string name="mnc">MNC</string>
    <string name="pci">PCI</string>
    <string name="tac">TAC</string>
    <string name="level">Level</string>
    <string name="isRegistered">Is Registered</string>
    <string name="cellConnectionStatus">Cell Connection Status</string>
    <string name="asuLevel">ASU Level</string>
    <string name="lac">LAC</string>
    <string name="timingAdvance">Timing Advance</string>
    <string name="bitErrorRate">Bit Error Rate</string>
    <string name="bitErrorRate_short">BER</string>
    <string name="dbm">dBm</string>
    <string name="rssi">RSSI</string>
    <string name="earfcn">EARFCN</string>
    <string name="bandwidth">Bandwidth</string>
    <string name="cqi">CQI</string>
    <string name="rsrp">RSRP</string>
    <string name="rsrq">RSRQ</string>
    <string name="rssnr">RSSNR</string>
    <string name="mcc">MCC</string>
    <string name="nrarfcn">NRARFCN</string>
    <string name="csirsrp">CSI RSRP</string>
    <string name="csirsrq">CSI RSRQ</string>
    <string name="csisinr">CSI SINR</string>
    <string name="ssrsrp">SS RSRP</string>
    <string name="ssrsrq">SS RSRQ</string>
    <string name="sssinr">SS SINR</string>
    <string name="plmn">PLMN</string>
    <string name="cell_na">No Cell Information Available</string>
    <string name="model">Model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="socManufacturer">SoC Manufacturer</string>
    <string name="socModel">SoC Model</string>
    <string name="radioVersion">Radio Version</string>
    <string name="supportedModemCount">Supported Modem Count</string>
    <string name="androidSDK">Android SDK</string>
    <string name="androidRelease">Android Release</string>
    <string name="deviceSoftwareVersion">Device Software Version</string>
    <string name="securityPatchLevel">Security Patch Level</string>
    <string name="IMEI">IMEI</string>
    <string name="IMSI">IMSI</string>
    <string name="MEID">MEID</string>
    <string name="simSerial">SIM Serial</string>
    <string name="networkAccessIdentifier">Network Access Identifier</string>
    <string name="subscriptionId">Subscription ID</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="altitude">Altitude</string>
    <string name="provider">Provider</string>
    <string name="accuracy">Accuracy</string>
    <string name="speed">Speed</string>
    <string name="networkOperatorName">Network Operator Name</string>
    <string name="simOperatorName">SIM Operator Name</string>
    <string name="networkSpecifier">Network Specifier</string>
    <string name="dataState">Data State</string>
    <string name="dataNetworkType">Data Network Type</string>
    <string name="phoneType">Phone Type</string>
    <string name="enable_radio_notification_summary">Serving Cell Parameter: PCI, RSRP...</string>
    <string name="enable_radio_notification">Enable Cell Notification</string>
    <string name="notification_settings">Notification settings</string>
    <string name="device_name">Unique Device Name</string>
    <string name="slicing_is_a_5g_sa_only_feature_it_requires_configuration_on_your_core_network_this_is_still_under_developemnt">Slicing is a 5G SA only feature. It requires configuration on your core network. This is still under developemnt</string>
    <string name="enterprise_1">Enterprise 1</string>
    <string name="enterprise_2">Enterprise 2</string>
    <string name="enterprise_3">Enterprise 3</string>
    <string name="filter_string">filter string</string>
    <string name="mqtt_summary">Enables MQTT Services for OMNT.</string>
    <string name="mqtt_credentials_summary">Section to set Credentials for MQTT.</string>
    <string name="mqtt_host_summary">MQTT Broker Address</string>
    <string name="mqtt_client_password_summary">MQTT Client Password.</string>
</resources>