<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  SPDX-FileCopyrightText: 2023 Peter Hasse <peter.hasse@fokus.fraunhofer.de>
  ~  SPDX-FileCopyrightText: 2023 Johann Hackler <johann.hackler@fokus.fraunhofer.de>
  ~  SPDX-FileCopyrightText: 2023 Fraunhofer FOKUS
  ~
  ~  SPDX-License-Identifier: BSD-3-Clause-Clear
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.fraunhofer.fokus.OpenMobileNetworkToolkit.WorkProfile.WorkProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@mipmap/portfolio"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/main_message" />

        <!-- setPreferentialNetworkServiceEnabled -->

        <Switch
            android:id="@+id/preferential_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="8dp"
            android:text="@string/preferential_network_service"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            />

        <Button
            android:id="@+id/set_chrome_restrictions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_chrome_restrictions" />

        <Button
            android:id="@+id/clear_chrome_restrictions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_chrome_restrictions" />

        <!-- Intent Forwarding -->

        <Button
            android:id="@+id/enable_forwarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/enable_forwarding" />

        <Button
            android:id="@+id/disable_forwarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disable_forwarding" />

        <Button
            android:id="@+id/send_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_intent_text" />

        <!-- Remove profile -->

        <Button
            android:id="@+id/remove_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/remove_profile" />

    </LinearLayout>

</ScrollView>
