<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  SPDX-FileCopyrightText: 2023 Peter Hasse <peter.hasse@fokus.fraunhofer.de>
  ~  SPDX-FileCopyrightText: 2023 Johann Hackler <johann.hackler@fokus.fraunhofer.de>
  ~  SPDX-FileCopyrightText: 2023 Fraunhofer FOKUS
  ~
  ~  SPDX-License-Identifier: BSD-3-Clause-Clear
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fragment="de.fraunhofer.fokus.OpenMobileNetworkToolkit.SettingPreferences.SettingsFragment">

    <PreferenceCategory
        android:title="@string/home_screen_settings"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="show_neighbour_cells"
            android:title="@string/show_neighbour_cells"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/notification_settings"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="enable_radio_notification"
            app:summary="@string/enable_radio_notification_summary"
            app:title="@string/enable_radio_notification" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/app_settings"
        app:iconSpaceReserved="false">

    <EditTextPreference
        android:icon="@drawable/baseline_android_24"
        app:key="device_name"
        app:title="@string/device_name"
        app:useSimpleSummaryProvider="true"
        />
    <Preference
        android:icon="@drawable/ic_baseline_code_24"
        app:fragment="de.fraunhofer.fokus.OpenMobileNetworkToolkit.SettingPreferences.LoggingSettingsFragment"
        app:key="log_settings"
        app:dependency="device_name"
        app:title="Logging" />
    <Preference
        android:icon="@drawable/baseline_cell_tower_24"
        app:fragment="de.fraunhofer.fokus.OpenMobileNetworkToolkit.SettingPreferences.MobileNetworkSettingsFragment"
        app:key="mobile_network_settings"
        app:title="Mobile Network" />
    <ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="1"
        android:title="Set subscription (SIM)"
        app:dialogTitle="Subscription to be used by OMNT"
        app:icon="@drawable/sim_card"
        app:key="select_subscription" />
    <Preference
        android:icon="@drawable/baseline_restart_alt_24"
        app:key="reset_modem"
        app:title="Reboot Modem" />
    <Preference
        android:icon="@drawable/mqtt"
        app:fragment="de.fraunhofer.fokus.OpenMobileNetworkToolkit.SettingPreferences.MQTTSettingsFragment"
        app:key="mqtt_settings"
        app:dependency="device_name"
        app:title="MQTT Settings" />
    <Preference
        android:icon="@drawable/ic_action_share_blue"
        app:fragment="de.fraunhofer.fokus.OpenMobileNetworkToolkit.SettingPreferences.SharedPreferencesIOFragment"
        app:key="shared_preferences_io"
        app:title="Config" />

    </PreferenceCategory>

</PreferenceScreen>