<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  SPDX-FileCopyrightText: 2025 Peter Hasse <peter.hasse@fokus.fraunhofer.de>
  ~  SPDX-FileCopyrightText: 2025 Johann Hackler <johann.hackler@fokus.fraunhofer.de>
  ~  SPDX-FileCopyrightText: 2025 Fraunhofer FOKUS
  ~
  ~  SPDX-License-Identifier: BSD-3-Clause-Clear
  -->

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_slicingsetup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".SlicingSetupFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/slicing_fragment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/slicing_setup"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/slicing_fragment_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/slicing_is_a_5g_sa_only_feature_it_requires_configuration_on_your_core_network_this_is_still_under_developemnt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ENTERPRISE1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/enterprise_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ENTERPRISE2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/enterprise_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ENTERPRISE3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/enterprise_3" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:id="@+id/sliceInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>