<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SPDX-FileCopyrightText: 2021 Peter Hasse <peter.hasse@fokus.fraunhofer.de>
  ~ SPDX-FileCopyrightText: 2021 Fraunhofer FOKUS
  ~
  ~ SPDX-License-Identifier: apache2
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="de.fraunhofer.fokus.OpenMobileNetworkToolkit.HomeFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_AboutFragment"
            app:destination="@id/about_fragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SliceFragment"
            app:destination="@+id/fragment_slice" />
        <action
            android:id="@+id/action_HomeFragment_to_fragment_slicingsetup"
            app:destination="@id/fragment_slicingsetup" />

    </fragment>
    <fragment
        android:id="@+id/about_fragment"
        android:label="@string/second_fragment_label"
        android:name="de.fraunhofer.fokus.OpenMobileNetworkToolkit.AboutFragment"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_about_fragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/fragment_slicingsetup"
        android:name="de.fraunhofer.fokus.OpenMobileNetworkToolkit.SlicingSetup"
        android:label="@string/slicing_setup"
        tools:layout="@layout/fragment_slicingsetup">
        <action
            android:id="@+id/action_fragment_slicingsetup_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
</navigation>