<?xml version="1.0" encoding="utf-8"?><!--
  ~  SPDX-FileCopyrightText: 2023 Peter Hasse <peter.hasse@fokus.fraunhofer.de>
  ~  SPDX-FileCopyrightText: 2023 Johann Hackler <johann.hackler@fokus.fraunhofer.de>
  ~  SPDX-FileCopyrightText: 2023 Fraunhofer FOKUS
  ~
  ~  SPDX-License-Identifier: BSD-3-Clause-Clear
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/carrier_settings"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_read_carrier_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/read_carrier_settings" />

        <EditText
            android:id="@+id/carrier_settings_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:autofillHints="filter string"
            android:hint="@string/filter_string"
            android:inputType="textNoSuggestions" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp" >

        <androidx.cardview.widget.CardView
            android:id="@+id/carrier_settings_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="500dp" />
    </ScrollView>

</LinearLayout>